<resources>
    <string name="app_name"></string>
    <string name="hint_username">Email or Phone</string>
    <string name="hint_password">Password</string>
    <string name="button_text_login">LOGIN</string>
    <string name="text_sign_up">Sign Up for Facebook</string>
    <string name="text_need_help">Need help?</string>
    <string name="img_Images_not_load">err</string>
    <string name="title">Your Logo</string>
    <string name="button_text_signin">SIGN IN</string>
    <string name="text_forgot_password">Forgot your password?</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="user">Username</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="button_get_started">GET STARTED</string>
</resources>
